--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -647,20 +647,66 @@ yay
 \section{Überblick}
 \label{section:konzeption_ueberblick}
 
+Darstellungsform und Überblick erklären laut Szenario. Grammel sagt 
+
+Using familiar terminology
+- Labels that explain the visualization --> VISO + Komponentenbeschreibung, siehe 3.2
+- Labels for the visualization construction user interface --> NMP
+- Infer visualization settings from partial specifications --> wat?
+- Provide appropriate visualizations based on the user’s visual literacy --> Nicht mein Problem
+- Contextualized help --> Yes sir
+- Link to tutorials --> Gute Idee. Komponentenbeschreibung
+- Show information on prominent features --> wat?
+- Collaborative visualization --> I'm on it. Siehe KOmmentare.
+- Distributed collaboration support for user-initiated, short-term help seeking --> Das wäre quasi ein Chat. Mal überlegen.
+– Learning to choose visualization types and visual mappings (Section 7.4.2) --> Nicht meine Aufgabe
+- Reducing the risk and increasing the speed of visualization design --> wat?
+
+- Suggesting alternative visualizations and mappings --> NMP
+- Providing explanations --> Yes sir
+- Tutorials that explain visualization concepts and trade-offs --> NMP
+– Learning tool usage (general usability guidelines) --> Yes Sir
+
 \section{Bedienung}
 \label{section:konzeption_bedienung}
+
+Konzept von Operationen, Aktionen und Aufgaben. Wird alles in Komponente annotiert und dann Assistance daraus generiert.
+
+Form der Assistance? Multimodal wäre lt Grundlagen gut, aber von UX Standpunkt aus gesehen nervt plötzlicher Sound tierisch. Vielleicht an/ausschaltbar. Comic-Animation mit optionaler Soundausgabe.
+
+Animationen mit tatsächlichen DOM Elementen wäre wahrscheinlich verständnisfördender, aber das geht entweder mit a) einer Beschreibungssprache für Aktivitäten (welche Elemente wie sortiert werden sollen, welche Achsen getauscht werden sollen usw usf) weil der Interaktion in den Komponenten keine Grenzen gesetzt sind oder b) Dev schreibt für jede Interaktion ein Demo-Funktion (die zB Tabellenzeilen hin und herschiebt um Sortierung zu demonstrieren). Probleme a): Sehr umfangreich und trotzdem werden nie alle Fälle abgedeckt sein. Probleme b): Entwicklungsaufwand, uneinheitliches Look \& Feel.
 
 \section{Reporting}
 \label{section:konzeption_reporting}
 
+Kontext mitschicken zum Bug Report sodass überprüft werden kann, ob die Komponente tatsächlich kaputt ist oder nur falsch verdrahtet wurde. Am Besten Freitext, weil es für den Benutzer eh nicht ersichtlich ist, was falsch läuft. Da braucht man auch keine Kategorisierung vornehmen. Der Report sollte automatisch ein Ticket in irgendeinem Support-System erstellen.
+
 \section{Verlinkung}
 \label{section:konzeption_verlinkung}
+
+Bei der Analyse im DaRe wird schon nach Synonymen über WordNet gesucht. Die kann man versuchen in der DBpedia zu finden und dort den Link zu mehreren relevanten Wikipedia-Artikeln rauszuholen. Wenn man dann wiederum weiß, welche Daten in einem Chart angezeigt werden (WIE? auch für 3.1 wichtig), kann man die Konzepte verlinken.
 
 \section{Kommunikation}
 \label{section:konzeption_kommunikation}
 
+Hier aufpassen, weil es bei edyra schon irgendeinen View gibt, der die Kommunikation anzeigt. Meine Idee war alle Verbindungen der verschiedenen Kanäle explizit sichtbar zu machen, zu animieren wenn etwas passiert und eine Erklärung zu geben (ähnlich 2.2) warum das passiert: Welche Interaktion mit welchen Elementen löst welches Element aus was wiederum welche Operation ausführt die ihrerseits was macht?
+
 \section{Kommentare}
 \label{section:konzeption_kommentare}
+
+Was ist überhaupt wichtig für Kommentare und welche Arten von Insights gibt es? Text + Markierung in InfoVis damit man weiß, was gemeint ist. Achtung: InfoVis ist interaktiv, kann sich also verändern.
+
+Allgemein: Avatare, Benutzernamen für Credibility. Verlinkung von Kommentaren notwendig. Tiefe des Antwortbaumes maximal 1, sonst wirds unübersichtlich. Zustand der KOmponente muss wiederhergestellt werden, bevor Kommentar angezeigt werden kann (sonst sinnlos).
+
+Markierung: Kann prinzipiell auf Bereichen (in Scatterplot, Balkendiagrammen...) erfolgen oder konkrete Elemente sein (Scatterplot). Bereiche: Erstmal nur Rechtecke aufziehen, aber prinzipiell kanns ein beliebiges Polygon sein. Elemente: So auswählen (data-vizboard-selected Markup). 
+
+Speichern: Komponente definiert Memento um Zustand wiederherzustellen (geht auch über Properties, ist aber für mich umständlicher). Wenn möglich (Scatterplot ja, Treemap nein) Funktion zur Tranformation von Auswahlkoordinaten in Datenpunkte. Kommentare an Elementen einfach so ablegen und Element mit URI referenzieren.
+
+Laden: Mit SPARQL rausziehen, schauen ob die sichtbaren Elemente oder Koordinaten übereinstimmen, overlay bilden, anzeigen.
+
+Offene Fragen: Wie Kommentare zu Datenbereichen abspeichern? Idealerweise URI von datatype property hernehmen und deren grenzwerte (Dollar, 200-5000). ABER! Was ist mit Metadaten, also irgenwelchen Verteilungen oder Abweichungen davon?
+
+Wie können Kommentare wieder in Wissensbasis eingebracht werden? Viele Papers durchsuchen Kommentare nach Termen, die wiederum für Suche oder Kategorisierung verwendet werden können. Ansonsten kann wahrscheinlich auch eine ganze Ontologie aus Kommentaren extrahiert werden \url{http://eprints.soton.ac.uk/258194/1/Alani-HLT03-final.pdf}, wenn man die mal definiert hat. Stichworte Text Mining und Knowledge Extraction.
 
 \section{Synthese}
 \label{section:konzeption_synthese}
